Distribuição das cartas

--- a/index.html
+++ b/index.html
@@ -15,22 +15,8 @@
     <div class="titulo">
         <h1> PARROT CARD GAME </h1>
     </div>
-    <ul>
-        <li> <img src="/midia/front.png"> </li>
-        <li> <img src="/midia/front.png"> </li>
-        <li> <img src="/midia/front.png"> </li>
-        <li> <img src="/midia/front.png"> </li>
-        <li> <img src="/midia/front.png"> </li>
-        <li> <img src="/midia/front.png"> </li>
-        <li> <img src="/midia/front.png"> </li>
-        <li> <img src="/midia/front.png"> </li>
-        <li> <img src="/midia/front.png"> </li>
-        <li> <img src="/midia/front.png"> </li>
-        <li> <img src="/midia/front.png"> </li>
-        <li> <img src="/midia/front.png"> </li>
-        <li> <img src="/midia/front.png"> </li>
-        <li> <img src="/midia/front.png"> </li>
-    </ul>
+    <ul class="linha-1"></ul>
+    <ul class="linha-2"></ul>
 </body>
 <script src="script.js"></script>
 </html>
