Cartas e jogo funcionando

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     </div>
     <ul class="linha-1"></ul>
     <ul class="linha-2"></ul>
+    <div class="congelar-site"></div>
 </body>
 <script src="script.js"></script>
 </html>
