--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>Parrot Card Game</title>
 </head>
 <body>
+    <div class="relogio"> 00:00 </div>
     <div class="titulo">
         <h1> PARROT CARD GAME </h1>
     </div>
